new URI in mainwindow.